--- a/src/PipelineMonitor/PipelineMonitor.csproj
+++ b/src/PipelineMonitor/PipelineMonitor.csproj
@@ -76,4 +76,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" />
+  </ItemGroup>
+
 </Project>
