--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -14,8 +14,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageVersion Include="Azure.Identity" Version="1.17.1" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="$(MicrosoftExtensionsVersion)" />
+    <PackageVersion Include="Microsoft.TeamFoundationServer.Client" Version="19.225.2" />
     <PackageVersion Include="MSTest" Version="4.0.1" />
+    <PackageVersion Include="System.CommandLine" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
