Move logging to LocalApplicationData

--- a/src/PipelineMonitor/PipelineMonitor.csproj
+++ b/src/PipelineMonitor/PipelineMonitor.csproj
@@ -85,4 +85,10 @@
     <PackageReference Include="System.CommandLine" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
