--- a/src/PipelineMonitor/appsettings.json
+++ b/src/PipelineMonitor/appsettings.json
@@ -6,7 +6,7 @@
     "targets": {
       "logfile": {
         "type": "File",
-        "fileName": "${var:logDirectory}/run-${shortdate}.log"
+        "fileName": "${var:logDirectory}/run-${date:format=yyyy-MM-dd-HHmmss}.log"
       }
     },
     "rules": [
