--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -23,6 +23,7 @@
     <PackageVersion Include="NLog.Extensions.Hosting" Version="6.1.0" />
     <PackageVersion Include="Spectre.Console" Version="0.54.1-alpha.0.31" />
     <PackageVersion Include="System.CommandLine" Version="2.0.1" />
+    <PackageVersion Include="YamlDotNet" Version="16.3.0" />
     <!-- System.Data.SqlClient is a transitive dependency from Microsoft.TeamFoundationServer.Client.
          This direct reference overrides version 4.8.5 to fix CVE-2024-0056 (GHSA-98g6-xh36-x2p7),
          a high-severity vulnerability allowing encryption bypass on SQL Server connections. -->
