--- a/src/PipelineMonitor.Tests/PipelineMonitor.Tests.csproj
+++ b/src/PipelineMonitor.Tests/PipelineMonitor.Tests.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="MSTest" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../PipelineMonitor/PipelineMonitor.csproj" />
+  </ItemGroup>
+
   <ItemGroup Label="Global usings">
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
