--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageVersion Include="Azure.Identity" Version="1.17.1" />
+    <PackageVersion Include="Humanizer.Core" Version="3.0.1" />
     <PackageVersion Include="CliWrap" Version="3.10.0" />
     <PackageVersion Include="ConsoleAppFramework" Version="5.7.13" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="$(MicrosoftExtensionsVersion)" />
