Add snapshot tests for output formatting

--- a/src/PipelineMonitor.Tests/PipelineMonitor.Tests.csproj
+++ b/src/PipelineMonitor.Tests/PipelineMonitor.Tests.csproj
@@ -6,6 +6,7 @@
   <!-- Package versions are managed centrally in ../Directory.Packages.props. -->
   <ItemGroup>
     <PackageReference Include="MSTest" />
+    <PackageReference Include="Verify.MSTest" />
   </ItemGroup>
 
   <ItemGroup>
