--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,22 +1,19 @@
 <Project>
-
   <!-- This file contains all package versions used by all projects.
     If packages are used in multiple projects, this ensures that they all use
     the same version. See the NuGet CPM documentation for more details:
     https://learn.microsoft.com/en-us/nuget/consume-packages/Central-Package-Management -->
-
   <PropertyGroup>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
-
   <PropertyGroup>
     <MicrosoftExtensionsVersion>10.0.1</MicrosoftExtensionsVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageVersion Include="Azure.Identity" Version="1.17.1" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="$(MicrosoftExtensionsVersion)" />
     <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="$(MicrosoftExtensionsVersion)" />
+    <PackageVersion Include="Verify.MSTest" Version="31.11.0" />
     <PackageVersion Include="Xdg.Directories" Version="0.1.2" />
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
     <PackageVersion Include="CliWrap" Version="3.10.0" />
@@ -24,7 +21,7 @@
     <PackageVersion Include="Markout" Version="0.3.0" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="$(MicrosoftExtensionsVersion)" />
     <PackageVersion Include="Microsoft.TeamFoundationServer.Client" Version="19.225.2" />
-    <PackageVersion Include="MSTest" Version="4.0.1" />
+    <PackageVersion Include="MSTest" Version="4.1.0" />
     <PackageVersion Include="NLog.Extensions.Hosting" Version="6.1.0" />
     <PackageVersion Include="Spectre.Console" Version="0.54.1-alpha.0.31" />
     <PackageVersion Include="System.CommandLine" Version="2.0.1" />
@@ -34,5 +31,4 @@
          a high-severity vulnerability allowing encryption bypass on SQL Server connections. -->
     <PackageVersion Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
-
 </Project>
